--- a/public/frontend/assets/css/rateit.css
+++ b/public/frontend/assets/css/rateit.css
@@ -1,5 +1,6 @@
-
 /*===================================================================================*/
+
+
 /*  Rating CSS
 /*===================================================================================*/
 
@@ -16,18 +17,17 @@
     -webkit-touch-callout: none;
 }
 
-.rateit .rateit-range
-{
+.rateit .rateit-range {
     position: relative;
     display: -moz-inline-box;
     display: inline-block;
     background: url(images/star.gif);
     height: 14px;
     outline: none;
+    margin-top: 6px;
 }
 
-.rateit-small .rateit-range
-{
+.rateit-small .rateit-range {
     position: relative;
     display: -moz-inline-box;
     display: inline-block;
@@ -37,85 +37,78 @@
 }
 
 .rateit .rateit-range * {
-    display:block;
+    display: block;
 }
+
 
 /* for IE 6 */
-* html .rateit, * html .rateit .rateit-range
-{
+
+* html .rateit,
+* html .rateit .rateit-range {
     display: inline;
 }
+
 
 /* for IE 7 */
-* + html .rateit, * + html .rateit .rateit-range
-{
+
+*+html .rateit,
+*+html .rateit .rateit-range {
     display: inline;
 }
 
-.rateit .rateit-hover, .rateit .rateit-selected
-{
+.rateit .rateit-hover,
+.rateit .rateit-selected {
     position: absolute;
     left: 0px;
 }
 
-.rateit .rateit-hover-rtl, .rateit .rateit-selected-rtl
-{
+.rateit .rateit-hover-rtl,
+.rateit .rateit-selected-rtl {
     left: auto;
     right: 0px;
 }
 
-.rateit .rateit-hover
-{
+.rateit .rateit-hover {
     background: url(images/star.gif) left -28px;
 }
 
-.rateit-small .rateit-hover
-{
+.rateit-small .rateit-hover {
     background: url(images/star-small.png) left -328px;
 }
 
-.rateit .rateit-hover-rtl
-{
+.rateit .rateit-hover-rtl {
     background-position: right -28px;
 }
 
-.rateit .rateit-selected
-{
+.rateit .rateit-selected {
     background: url(images/star.gif) left -14px;
 }
 
-.rateit-small .rateit-selected
-{
+.rateit-small .rateit-selected {
     background: url(images/star-small.png) left -14px;
 }
 
-.rateit .rateit-selected-rtl
-{
+.rateit .rateit-selected-rtl {
     background-position: right -14px;
 }
 
-.rateit .rateit-preset
-{
+.rateit .rateit-preset {
     background: url(images/star.gif) left -48px;
 }
 
-.rateit .rateit-preset-rtl
-{
+.rateit .rateit-preset-rtl {
     background: url(images/star.gif) left -48px;
 }
 
-.rateit-small .rateit-preset
-{
+.rateit-small .rateit-preset {
     background: url(images/star-small.png) left -48px;
 }
 
-.rateit-small .rateit-preset-rtl
-{
+.rateit-small .rateit-preset-rtl {
     background: url(images/star-small.png) left -48px;
 }
 
-.rateit button.rateit-reset
-{
+.rateit button.rateit-reset {
     background: url(images/delete.gif) 0 0;
     width: 14px;
     height: 14px;
@@ -123,11 +116,11 @@
     display: inline-block;
     float: left;
     outline: none;
-    border:none;
+    border: none;
     padding: 0;
 }
 
-.rateit button.rateit-reset:hover, .rateit button.rateit-reset:focus
-{
+.rateit button.rateit-reset:hover,
+.rateit button.rateit-reset:focus {
     background-position: 0 -14px;
 }
