--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -662,7 +662,8 @@ img[src="assets/images/blank.gif"] {
 }
 
 .latest-blog .blog-post img {
-    width: 100%
+    width: 100%;
+    height: 215px;
 }
 
 .logo-slider-inner {
@@ -3750,6 +3751,13 @@ header {
 .blog-slider-container .blog-slider .blog-post-info .text {
     color: #434343;
     font-size: 13px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    /* number of lines to show */
+    line-clamp: 5;
+    -webkit-box-orient: vertical;
 }
 
 .footer .links-social {
