--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -7102,3 +7102,37 @@ header {
 .star-unchecked {
     color: #d7d7d7;
 }
+
+.coupon-price {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.coupon-price .input-coupon {
+    width: 65%;
+}
+
+.order-product {
+    display: flex;
+    justify-content: space-between;
+}
+
+.payment {
+    border: 0.5px solid #d1d1d1;
+    border-radius: 5px;
+}
+
+.pay-item {
+    padding: 20px 12px;
+}
+
+.pay-item:first-child {
+    border-bottom: 1px solid #d1d1d1;
+}
+
+.pay-item label {
+    margin: 0 0 0 8px;
+    color: #545454;
+    font-weight: 600;
+}
