--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -7152,3 +7152,62 @@ span.item-cart {
     border: 0.5px solid #d7d7d7;
     border-radius: 5px;
 }
+
+.list-order>tbody>tr>td,
+.list-order>tbody>tr>th,
+.list-order>thead>tr>th {
+    padding: 20px 0;
+    font-size: 14px;
+}
+
+.order-detail {
+    margin: 0;
+}
+
+.order-detail h1 {
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 35px;
+}
+
+.order-detail p.order-date {
+    font-weight: 600;
+    font-style: italic;
+    font-size: 15px;
+}
+
+.order-detail .info-customer h3 {
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.order-detail .info-customer p {
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 13px;
+}
+
+.order-detail .info-customer p i {
+    margin-right: 10px;
+}
+
+.order-detail .info-customer .address {
+    font-weight: 600;
+}
+
+.order-detail .order-item {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    margin-bottom: 30px;
+}
+
+.order-detail .order-item th,
+.order-detail .order-item td {
+    border: 1px solid #c7c7c7;
+    padding: 10px 0;
+    font-size: 14px;
+    text-align: center;
+}
