--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -7077,7 +7077,7 @@ header {
 }
 
 .not-cart {
-    padding: 50px 15px 250px;
+    padding: 50px 15px 300px;
 }
 
 .blog-content {
@@ -7210,4 +7210,18 @@ span.item-cart {
     padding: 10px 0;
     font-size: 14px;
     text-align: center;
+}
+
+.show-notification {
+    position: fixed;
+    right: 20px;
+    top: 40px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s ease-in-out;
+}
+
+.show-alert {
+    opacity: 1;
+    visibility: visible;
 }
