--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -6883,6 +6883,7 @@ header {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .08);
     padding: 20px;
     overflow: hidden;
+    margin-bottom: 50px;
 }
 
 .body-content .sign-in-page .sign-in h4,
