--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -1,3 +1,7 @@
+.header-style-1 .header-nav .navbar-default .navbar-collapse .navbar-nav>li>a {
+    font-size: 15px;
+}
+
 .rating-reviews span {
     font-size: 20px;
 }
@@ -49,4 +53,52 @@
     background: #fff;
     font-size: 14px;
     font-weight: 500;
+}
+
+.single-product .product-tabs .tab-content .tab-pane .text {
+    font-size: 16px;
+    line-height: 27px;
+}
+
+.product-tabs .tab-content .tab-pane .product-add-review .review-form label {
+    font-size: 16px;
+}
+
+.product-tabs .tab-content .tab-pane .product-add-review .title {
+    font-size: 16px;
+}
+
+.product-tabs .tab-content .tab-pane .product-reviews .title {
+    font-size: 16px;
+}
+
+.review-form .table {
+    font-size: 16px;
+}
+
+.product-size span,
+.product-color span {
+    display: inline-block;
+    font-size: 14px !important;
+}
+
+.shopping-cart-table table tbody tr td .quant-input {
+    height: 50px;
+}
+
+.shopping-cart-table table tbody tr td .quant-input input {
+    height: 50px;
+    font-size: 16px;
+}
+
+.shopping-cart-table table tbody tr td .quant-input .arrows {
+    font-size: 17px;
+}
+
+.breadcrumb ul {
+    font-size: 15px;
+}
+
+.breadcrumb ul li a {
+    font-size: 15px;
 }
