--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -1,3 +1,7 @@
+label {
+    font-size: 15px;
+}
+
 .header-style-1 .header-nav .navbar-default .navbar-collapse .navbar-nav>li>a {
     font-size: 15px;
 }
@@ -101,4 +105,12 @@
 
 .breadcrumb ul li a {
     font-size: 15px;
+}
+
+.transport .alert-info {
+    font-size: 15px;
+}
+
+.checkout-form {
+    margin-bottom: 60px;
 }
