--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -130,3 +130,172 @@ label {
 .blog-page .blog-post {
     margin-bottom: 50px;
 }
+
+.amount-text {
+    font-size: 13px;
+}
+
+.item-price {
+    font-size: 15px;
+}
+
+.fee_charge_item {
+    font-size: 15px;
+}
+
+.charge-text {
+    font-size: 15px;
+}
+
+.sum-text {
+    font-size: 15px;
+}
+
+.sum_price_item {
+    font-size: 15px;
+}
+
+.list-coupon {
+    background-color: rgba(0, 0, 0, 0.521);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1;
+    transition: all .3s ease-in-out;
+}
+
+.detail-list-counpon {
+    z-index: 1000;
+    margin-top: -300px;
+    width: 350px;
+    border-radius: 10px;
+    background-color: #d9f1fd;
+}
+
+.detail-list-counpon h3 {
+    margin-bottom: 10px;
+    margin-top: 0;
+    padding: 16px 0;
+    background: #efefef;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.detail-list-counpon h3 span {
+    display: inline-block;
+    cursor: pointer;
+    margin-left: 40px;
+}
+
+.detail-list-counpon .item {
+    padding: 10px;
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1), 0 1px 20px 0 rgba(0, 0, 0, 0.1);
+    background: #fff;
+    border-radius: 10px;
+    margin: 16px;
+}
+
+.detail-list-counpon .item p {
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.detail-list-counpon .item .expried {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.detail-list-counpon .item .expried button {
+    padding: 5px 8px;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 11px;
+    font-weight: bold;
+    background-color: #f1c14f;
+}
+
+.btn-show-coupon {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    bottom: 100px;
+    left: 20px;
+    color: #fff;
+    background-color: #1b4ea0;
+    padding: 17px 30px;
+    border-radius: 15px;
+    outline: none;
+    font-size: 14px;
+    border: none;
+}
+
+.btn-show-coupon svg {
+    background: #fff;
+    margin-right: 10px;
+}
+
+.coppy-coupon-success {
+    background-color: rgba(0, 0, 0, 0.521);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1;
+    transition: all .3s ease-in-out;
+}
+
+.coppy-coupon-success .success {
+    text-align: center;
+    z-index: 1000;
+    margin-top: -200px;
+    width: 500px;
+    padding: 40px 0;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1), 0 1px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.coppy-coupon-success .success img {
+    width: 100px;
+}
+
+.coppy-coupon-success .success h3 {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.coppy-coupon-success .success p {
+    font-size: 17px;
+    margin: 15px 0;
+}
+
+.coppy-coupon-success .success button {
+    color: #fff;
+    width: 80px;
+    padding: 10px 0;
+    outline: none;
+    border: none;
+    background-color: #1b4ea0;
+}
+
+.coupon-price input.form-control {
+    font-weight: bold;
+}
