--- a/public/backend/css/admin.css
+++ b/public/backend/css/admin.css
@@ -48,3 +48,13 @@
 .final_price {
     margin-right: 50px;
 }
+
+.btn-forget-password {
+    width: 150px !important;
+    padding: 16px 0;
+    margin-top: 30px;
+}
+
+.label-forget-password {
+    font-size: 15px !important;
+}
